[workspace]
members = [
    "scanner/lizt_inventory",
    "scanner/lizt_rest",
    "scanner/lizt_symbols",
    "common/lizt_core",
    "scanner/lizt_cli",
    "common/lizt_db",
]
exclude = ["monitor"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.13.2", features = ["json", "query"] }
async-trait = "0.1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["serde", "macros"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "time", "migrate", "uuid", "chrono", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.28.0", features = ["derive"] }
phf = { version = "0.13", features = ["macros"] }
radix_trie = "0.3"
log4rs = { version = "1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "time_trigger", "fixed_window_roller", "gzip", ] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21", features = ["serde"] }
rust_decimal = { version = "1.40", features = ["db-postgres", "serde"] }
inquire = "0.7"
