[workspace]
members = [
    "crates/ebpf",
    "crates/ebpf_programs",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "time", "migrate", "uuid", "chrono", "rust_decimal"] }
log = "0.4"
anyhow = "1"
log4rs = { version = "1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "time_trigger", "fixed_window_roller", "gzip", ] }

