[package]
name = "monitor"
version.workspace = true
edition.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
common = { workspace = true }
db = { workspace = true }
pipeline = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
