[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"