[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
