[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
