[package]
name = "lizt_rest"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
lizt_core = { path = "../lizt_core" }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
