[package]
name = "io-nvd"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
env_logger = "0.11.9"
