[package]
name = "io-symbols"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
io-nvd = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
