[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lizt-cli"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
db = { workspace = true }
pipeline = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
