[package]
name = "lizt_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lizt"
path = "src/main.rs"

[dependencies]
lizt_inventory = { path = "../lizt_inventory" }
lizt_rest = { path = "../lizt_rest" }
lizt_core = { path = "../../common/lizt_core" }
lizt_symbols = { path = "../lizt_symbols" }
lizt_db = { path = "../../common/lizt_db" }

futures = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
log4rs = { workspace = true }
log = { workspace = true }