[package]
name = "lizt_rest"
version = "0.1.0"
edition = "2024"

[dependencies]
lizt_core = { path = "../../common/lizt_core" }

futures = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
env_logger = "0.11"