[package]
name = "lizt_symbols"
version = "0.1.0"
edition = "2024"

[dependencies]
lizt_core = { path = "../../common/lizt_core" }
lizt_rest = { path = "../lizt_rest" }

regex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }