[package]
name = "web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lizt"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
db = { workspace = true }
pipeline = { workspace = true }
io-nvd = { workspace = true }       # for LiztClient type in AppState
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
monitor = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
