[package]
name = "ebpf"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lizt_monitord"
path = "src/main.rs"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { workspace = true }
sqlx = { workspace = true }
common = { path = "../../../core/common" }
db = { path = "../../../core/db" }
log = { workspace = true }
log4rs = { workspace = true }
anyhow = "1"
