[package]
name = "lizt_ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { workspace = true }
sqlx = { workspace = true }
lizt_core = { path = "../../../common/lizt_core" }
lizt_db = { path = "../../../common/lizt_db" }
log = { workspace = true }
anyhow = "1"

